@@ -6,6 +6,7 @@
 /dist/
 /test/
 /old/
+/venv/
 
 /local
 
